--- a/index.html
+++ b/index.html
@@ -5603,11 +5603,11 @@ initAppHoverPreviews();
 
 
 // ===============================
-// Auto-dismiss logic (5s inactivity)
+// Auto-dismiss logic (1ms inactivity)
 // ===============================
 
 // How long to wait without any hover before hiding
-const PREVIEW_INACTIVITY_MS = 5000;
+const PREVIEW_INACTIVITY_MS = 1;
 
 // Store timer ID
 let previewInactiveTimer = null;
