Add button to link to win98 recreation

--- a/index.html
+++ b/index.html
@@ -1269,6 +1269,7 @@
     <div class="start-footer">
       <span>Static HTML · CSS · JS · localStorage. No backend.</span>
       <span class="start-footer-aim">AIM · Agency · Intent · Myth</span>
+      <button class="start-app" onclick="location.href = "https://alaricholt677.github.io/moreOS/win98.html";">try win98 recreation out</button>
     </div>
   </div>
 
